<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_cccccc"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/app_about" />

        <TextView
            android:id="@+id/text_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_about"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textSize="@dimen/size_16"
            android:textColor="@color/text_title_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/text_about">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:lineSpacingExtra="2dp"
                android:layout_marginTop="25dp"
                android:paddingLeft="@dimen/padding_16"
                android:paddingRight="@dimen/padding_16"
                android:text="@string/about_content1"
                android:textColor="@color/text_title_gray"
                android:textSize="@dimen/size_16" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:lineSpacingExtra="2dp"
                android:layout_marginTop="@dimen/padding_15"
                android:paddingLeft="@dimen/padding_16"
                android:paddingRight="@dimen/padding_16"
                android:text="@string/about_content2"
                android:textColor="@color/text_title_gray"
                android:textSize="@dimen/size_16" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:lineSpacingExtra="2dp"
                android:layout_marginTop="@dimen/padding_15"
                android:paddingLeft="@dimen/padding_16"
                android:paddingRight="@dimen/padding_16"
                android:text="@string/about_content3"
                android:textColor="@color/text_title_gray"
                android:textSize="@dimen/size_16" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:lineSpacingExtra="2dp"
                android:layout_marginTop="@dimen/padding_15"
                android:paddingLeft="@dimen/padding_16"
                android:paddingRight="@dimen/padding_16"
                android:text="@string/about_content4"
                android:textColor="@color/text_title_gray"
                android:textSize="@dimen/size_16" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:lineSpacingExtra="2dp"
                android:layout_marginTop="@dimen/padding_15"
                android:paddingLeft="@dimen/padding_16"
                android:paddingRight="@dimen/padding_16"
                android:text="微博: @Dorafeed"
                android:textColor="@color/text_title_gray"
                android:textSize="@dimen/size_16" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/padding_2"
                android:paddingLeft="@dimen/padding_16"
                android:paddingRight="@dimen/padding_16"
                android:text="微信公众号: 多拉阅读"
                android:textColor="@color/text_title_gray"
                android:textSize="@dimen/size_16" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/padding_2"
                android:paddingLeft="@dimen/padding_16"
                android:paddingRight="@dimen/padding_16"
                android:text="邮箱: jihongliang@farmlink.cn"
                android:layout_marginBottom="30dp"
                android:textColor="@color/text_title_gray"
                android:textSize="@dimen/size_16" />

        </LinearLayout>
    </RelativeLayout>
    </RelativeLayout>